# alpha-ai

./: .gitignore  README.md  alembic.ini  docker-compose.yml  env.example  package-lock.json  package.json  pyproject.toml  run-backend.sh  run-frontend.sh  server_with_kis.py  supabase_init.sql  test_kis_api.py  test_kis_improved.py  test_server.py
app/backend/: __init__.py  celery_app.py  main.py
app/backend/core/: config.py  database.py  logging.py  security.py
app/backend/kis/: __init__.py  auth.py  hashkey.py  overseas_orders.py  realtime.py
app/backend/models/: __init__.py  account.py  logging.py  trading.py  user.py
app/backend/routes/: auth.py
app/backend/schemas/: auth.py
app/backend/services/: auth.py
app/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
app/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/frontend/app/auth/login/: page.tsx
app/frontend/app/auth/register/: page.tsx
app/frontend/app/dashboard/: layout.tsx  page.tsx
app/frontend/components/: KISStatusCard.tsx  LoginForm.tsx  RealTimeStockCard.tsx  RegisterForm.tsx  UserMenu.tsx
app/frontend/lib/: api.ts
app/frontend/lib/hooks/: useApi.ts
infra/: Dockerfile.backend  Dockerfile.frontend
infra/migrations/: env.py
prompt/: 1-initial.md
